# TemplateProject

./: .gitignore  CONTRIBUTING.md  JINJA2_CONVERSION_SUMMARY.md  LICENSE  README.md  pyproject.toml  run.bat  run.sh  test_jinja2_conversion.py
.github/: INSTRUCTIONS.md
dev/: README.md  test_git_feature.py  test_jinja2_conversion.py  test_main_py_template.py
docs/: JINJA2_CONVERSION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md
src/template_project/: main.py  utils.py
src/template_project/generators/: __init__.py  jinja2_template_loader.py  project_generator.py  template_loader.py
src/template_project/gui/: home_tab.py  settings_tab.py
src/template_project/templates/: .copilot-instructions.md.template  .gitignore.template  INSTRUCTIONS.md.template  LICENSE.template  README.md.template  __main__.py.template  config.py.template  dev_readme.md.template  home_tab.py.template  main.py.template  pyproject.toml.template  run.bat.template  run.sh.template  settings_tab.py.template  test_main.py.template
